--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <!-- Custom Title Bar -->
         <div class="titlebar">
             <div class="titlebar-drag-region">
-                <div class="window-title">pynk by Jakub Wawak</div>
+                <div class="window-title">pynk</div>
             </div>
             <div class="window-controls">
                 <button class="window-control minimize" id="minimize-btn">−</button>
@@ -297,6 +297,12 @@
                                 <input type="file" id="import-hosts-input" accept=".json" style="display: none;">
                             </div>
                         </div>
+                        <div class="settings-group">
+                            <h4>application_data</h4>
+                            <div class="settings-actions">
+                                <button id="clear-data-btn" class="btn-secondary">clear_ping_data</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -323,15 +329,15 @@
                         <h3>author</h3>
                         <div class="author-info">
                             <p><strong>Jakub Wawak</strong></p>
-                            <p>Software Developer & Network Engineer</p>
-                            <p><a href="mailto:jakubwawak@gmail.com" class="author-link">jakubwawak@gmail.com</a></p>
-                            <p><a href="https://github.com/jakubwawak" class="author-link" target="_blank">github.com/jakubwawak</a></p>
+                            <p>Software Developer & Security Engineer</p>
+                            <p><a href="mailto:kubawawak@gmail.com" class="author-link">kubawawak@gmail.com</a></p>
+                            <p><a href="https://github.com/wjakew" class="author-link" target="_blank">github.com/wjakew</a></p>
                         </div>
                     </div>
                     
                     <div class="about-card">
                         <h3>license</h3>
-                        <p>© 2023-2024 Jakub Wawak. All rights reserved.</p>
+                        <p>© 2024 Jakub Wawak. All rights reserved.</p>
                         <p>This software is provided as-is without any warranties.</p>
                     </div>
                 </div>
